settings translation, added langauge to settings

--- a/lang/pl.json
+++ b/lang/pl.json
@@ -30,55 +30,57 @@
     "ITEM.Sell" : "Sprzedaj",
 
     "SETTINGS.InitRule" : "Zasady Inicjatywy",
-    "SETTINGS.InitHint" : "Configure which method is used to determine who acts first in combat.",
-    "SETTINGS.InitDefault" : "Default (Highest to Lowest Initative, Agility Tiebreaks)",
-    "SETTINGS.InitSL" : "Roll an Initiative test, higher SL goes first",
-    "SETTINGS.InitD10" : "Roll a d10 and add Initiative, higher goes first",
-    "SETTINGS.InitD10Agi" : "Roll a d10, add Initiative Bonus and Agility Bonus, higher goes first",
-    "SETTINGS.CapAdvIB" : "Cap Advantage at IB",
-    "SETTINGS.CapAdvIBHint" : "Sets the max value of Advantage as the character's Initiative Bonus.",
-    "SETTINGS.FastSL" : "Fast SL",
-    "SETTINGS.FastSLHint" : "Determine SL with the Fast SL optional rule as described on page 152.",
-    "SETTINGS.TestsAbove100" : "Tests Above 100%",
-    "SETTINGS.TestsAbove100Hint" : "Use optional rule Tests Above 100% as described on p 151. A successful Test gains +1 SL for each full 10% a tested Characteristic or Skill exceeds 100%.",
-    "SETTINGS.CriticalsFumblesAllTests" : "Criticals and Fumbles on all Tests",
-    "SETTINGS.CriticalsFumblesAllTestsHint" : "Rolling a double on any test results in an Astounding Success/Failure.",
-    "SETTINGS.ExtendedTests" : "Extended Tests and 0 SL",
-    "SETTINGS.ExtendedTestsHint" : "Rolling a +/- 0 on Extended Tests results in a +1/-1 respectively (p155).",
-    "SETTINGS.TestDialogAutoPopulate" : "Test Dialog Auto Populate",
-    "SETTINGS.TestDialogAutoPopulateHint" : "This setting automatically fills out information in the dialog for Tests. Some examples include: Wielding Defensive weapons automatically fills 'SL Bonus' in roll dialogs for melee weapons. This only occurs if it is not the actor's turn. Also when wieldirg an Accurate or (Im)precise Weapon (on the actor's turn).",
-    "SETTINGS.TestDialogDefaultDifficulty" : "Default Non-Combat Test Difficulty",
-    "SETTINGS.TestDialogDefaultDifficultyHint" : "Sets default Test difficulty to Average if there is no Combat. Outside of combat, or if unchecked, default difficulty is Challenging. In any case, this can be overridden in the Roll Dialog.",
-    "SETTINGS.NpcAverageChar" : "Set Average NPC Characteristics",
-    "SETTINGS.NpcAverageCharHint" : "Entering a recognized species value for an NPC automatically sets their characteristics to the average value for the species.",
-    "SETTINGS.PartialChannelling" : "Partial Channelling",
-    "SETTINGS.PartialChannellingHint" : "A common house rule that improves the flexibility of Channelling. Instead of requiring the SL to reach the spell's CN, you can instead cast at anytime with the CN reduced by the SL gained so far.",
-    "SETTINGS.RoundSummary" : "Display Round Summary",
-    "SETTINGS.RoundSummaryHint" : "When a round ends, display all combatants with conditions.",
-    "SETTINGS.StatusTurnStart" : "Show Combatant Status on Turn Start",
-    "SETTINGS.StatusTurnStartHint" : "When a Combatant starts their turn, their status is shown (Conditions and Modifiers). This status message is identical to the one shown from right clicking the combatant.",
-    "SETTINGS.FocusTurnStart" : "Focus on Turn Start",
-    "SETTINGS.FocusTurnStartHint" : "At the start of a combatant's turn, pan the camera to them.",
-    "SETTINGS.HideTestData" : "Hide Test Data",
-    "SETTINGS.HideTestDataHint" : "GM test chat cards don't show sensitive NPC data to players.",
-    "SETTINGS.ManualChatCards" : "Manual Chat Cards",
-    "SETTINGS.ManualChatCardsHint" : "Show blank roll result to fill in if physical dice are used.",
-    "SETTINGS.PlayerBrowser" : "Player access to browser",
-    "SETTINGS.PlayerBrowserHint" : "Allow players to access the Item browser.",
-    "SETTINGS.DangerousCrits" : "Dangerous Crits",
-    "SETTINGS.DangerousCritsHint" : "If an actor is reduced to below 0 wounds, if the number of negative wounds is greater than the actor's TB, the crit roll is made with a modifier equal to the Dangerous Crit Modifier for each negative wound greater than the actor's TB.",
-    "SETTINGS.DangerousCritsMod" : "Dangerous Crit Modifier",
-    "SETTINGS.DangerousCritsModHint" : "The amount to modify the crit roll by.",
-    "SETTINGS.WeaponLength" : "Weapon Length",
-    "SETTINGS.WeaponLengthHint" : "Use weapon length to apply modifiers as described by the rule on page 297.",
-    "SETTINGS.SoundEffects" : "Sound Effects",
-    "SETTINGS.SoundEffectsHint" : "Adds sound effects to various contextual actions.",
-    "SETTINGS.CustomCursor" : "Warhammer Cursor",
-    "SETTINGS.CustomCursorHint" : "Use a stylized Warhammer cursor (refresh to apply).",
-    "SETTINGS.AutoFillAdv" : "Auto Fill Advantage",
-    "SETTINGS.AutoFillAdvHint" : "Automatically fill the 'modifier' box in the Roll Dialog with the bonus given by Advantage. Disable this if you house rule Advantage being used differently.",
-    "SETTINGS.LimitEquippedWeapons" : "Limit Equipped Weapons",
-    "SETTINGS.LimitEquippedWeaponsHint" : "Limit the number of equipped weapons - only allow 1 two handed weapon to be equipped or 2 one handed weapons.",
+    "SETTINGS.InitHint" : "Ustaw sposób decydowania o kolejności w starciu.",
+    "SETTINGS.InitDefault" : "Domyślna (Od najwyższej do najniższej Inicjatywy, Zwinność decyduje o remisach)",
+    "SETTINGS.InitSL" : "Test Inicjatywy, o kolejności decyduje liczba PS",
+    "SETTINGS.InitD10" : "O kolejności decyduje Inicjatywa + 1K10, od najwyższej do najniższej",
+    "SETTINGS.InitD10Agi" : "O kolejności decyduje 1K10 + bonus z Inicjatywy + bonus ze Zwinności, od najwyższej do najniższej",
+    "SETTINGS.CapAdvIB" : "Limit Przewa w wysokości bonusu z Inicjatywy",
+    "SETTINGS.CapAdvIBHint" : "Ustaw maksymalną liczbę przewag dla Aktora w wysokości jego bonusu z Inicjatywy.",
+    "SETTINGS.FastSL" : "Szybkie PS",
+    "SETTINGS.FastSLHint" : "Patrz strona 152 podręcznika na temat zasady opcjonalnej, Szybkie PS.",
+    "SETTINGS.TestsAbove100" : "Testy powyżej 100%",
+    "SETTINGS.TestsAbove100Hint" : "Patrz strona 151 podręcznika na temat zasady opcjonalnej, Testy powyżej 100%.",
+    "SETTINGS.CriticalsFumblesAllTests" : "Krytyczne sukcesy i pech dla wszystkic testów",
+    "SETTINGS.CriticalsFumblesAllTestsHint" : "Wyrzucenie dubletu na dowolnym teście skutkuje Zdumiewającym Sukcesem/Porażką.",
+    "SETTINGS.ExtendedTests" : "Testy Wydłużone i 0 PS",
+    "SETTINGS.ExtendedTestsHint" : "Wyrzucenie +/- 0 podczas testu wydłużonego zawsze jest traktowane jako +1/01 (strona 155).",
+    "SETTINGS.ChannelingNegativeSL": "Splatanie Magii i negatywne PS",
+    "SETTINGS.ChannelingNegativeSLHint": "Wyrzucenie negatywnych PS podczas testu Splatania traktowane jest jako +0, wymuszając brak postępiu w Splataniu.",
+    "SETTINGS.TestDialogAutoPopulate" : "Automatycznie wypełniaj okno Testu",
+    "SETTINGS.TestDialogAutoPopulateHint" : "Zaznaczając tę opcję, automatycznie będą wypełniane pola w oknie Testu. Kilka przykładów uwzględnia: Trzymanie Broni z cechą Parująca automatycznie wypełni pole 'Bonus PS' w teście Walki (ale tylko gdy to nie jest tura danego Aktora), podobnie gdy Aktor trzyma broń z cechą Celna lub Nieprecyzyjna (w turze danego Aktora).",
+    "SETTINGS.TestDialogDefaultDifficulty" : "Domyślna trudność testów nie dotyczących Walki",
+    "SETTINGS.TestDialogDefaultDifficultyHint" : "Ustala domyślną trudność testu na Przeciętną jeśli nie trwa Walka. Gdy opcja jest niezaznaczona lub aktualnie toczy się Walka, trudność jest ustawiona na Wymagającą. Wartość zawsze można zmienić w oknie dialogowym Testu",
+    "SETTINGS.NpcAverageChar" : "Ustaw przeciętne Atrybuty dla BNów",
+    "SETTINGS.NpcAverageCharHint" : "Wybierając znaną rasę dla BNa, automatycznie zostaną ustawione Atrubytu na zdefiniowane tutaj.",
+    "SETTINGS.PartialChannelling" : "Częściowe Splatanie Magii",
+    "SETTINGS.PartialChannellingHint" : "Powszechny houserule, który czyni Splatanie Magii bardziej elastycznym. Zamiast wymagać, aby liczba PS osiągnęła PZ, możesz rzucić zaklęcie w dowolnym momencie, obniżając PZ o liczbę PS uzyskaną do tej pory przy Splataniu.",
+    "SETTINGS.RoundSummary" : "Wyświetl podsumowanie rundy",
+    "SETTINGS.RoundSummaryHint" : "Kiedy runda dobiega końca, wyświetl wszystkich walczących z ich Stanami.",
+    "SETTINGS.StatusTurnStart" : "Pokaż stan walczących na początku tury",
+    "SETTINGS.StatusTurnStartHint" : "Kiedy walczący rozpoczyna swoją rundę, wyświetl jego status (modyfikatory oraz stany). Ta wiadomość będzie identyczna do tej, wyświetlanej po prawo-kliku na walczącego.",
+    "SETTINGS.FocusTurnStart" : "Aktywuj na początku tury",
+    "SETTINGS.FocusTurnStartHint" : "Na początku tury walczącego, wycentruj kamerę na jego znaczniku.",
+    "SETTINGS.HideTestData" : "Ukryj informację o Testach",
+    "SETTINGS.HideTestDataHint" : "Karta podsumowania testu nie wyświetla pewnych danych graczom.",
+    "SETTINGS.ManualChatCards" : "Ręczne karty rzutów",
+    "SETTINGS.ManualChatCardsHint" : "Wyświetl puste formularze podsumowania rzutów na chacie, do ręcznego wypełnienia, gdy używane są fizyczne kości.",
+    "SETTINGS.PlayerBrowser" : "Dostęp graczy do Przeglądarki",
+    "SETTINGS.PlayerBrowserHint" : "Pozwól graczom przeglądać Przedmioty.",
+    "SETTINGS.DangerousCrits" : "Niebezpieczne Obrażenia Krytyczne",
+    "SETTINGS.DangerousCritsHint" : "Jeśli Punkty Wytrzymałości Aktora spadną poniżej 0 o wartość wyższą niż bonus z Wytrzymałości, rzut na Obrażenia Krytyczne będzie wykonywany z modyfikatorem podanym poniżej, dla każdego Obrażenia Krytycznego powyżej Bonusu z Wytrzymałości Aktora.",
+    "SETTINGS.DangerousCritsMod" : "Modyfikator Obrażeń Krytycznych",
+    "SETTINGS.DangerousCritsModHint" : "Wartość, o którą zmodyfikować rzut na Obrażenia Krytyczne.",
+    "SETTINGS.WeaponLength" : "Wielkość Broni",
+    "SETTINGS.WeaponLengthHint" : "Uwzględnij zasdę opcjonalną ze strony 297 dotyczącą modyfikatorów dla broni o różnej wielkości.",
+    "SETTINGS.SoundEffects" : "EFekty dźwiękowe",
+    "SETTINGS.SoundEffectsHint" : "Dodaj efekty dźwiękowe dostępne podczas wielu różnych akcji.",
+    "SETTINGS.CustomCursor" : "Specjalny kursor WFRP",
+    "SETTINGS.CustomCursorHint" : "Użyj stylizowanego kursora WFRP (wymaga przeładowania aplikacji).",
+    "SETTINGS.AutoFillAdv" : "Automatycznie wypełniał przewagi",
+    "SETTINGS.AutoFillAdvHint" : "Automatycznie wypełniaj pole 'Modyfikator' w oknie Tetu na podstawie posiadanych Przewag. Wyłącz, jeśli posiadasz houserule inaczej traktujące przewagi.",
+    "SETTINGS.LimitEquippedWeapons" : "Ogranicz liczbę wyposażonych broni",
+    "SETTINGS.LimitEquippedWeaponsHint" : "Ogranicz dozwoloną liczbę broni na ręce do 1 broni dwuręcznej lub dwóch broni jednoręcznych.",
 
     "SHEET.Close" : "Zamknij",
     "SHEET.Configure" : "Ustawienia Karty",
@@ -567,6 +569,7 @@
     "ROLL.ImpressiveFailure" : "Imponująca Porażka",
     "ROLL.Failure" : "Porażka",
     "ROLL.MarginalFailure" : "Znikoma Porażka",
+    "ROLL.SizeCausedSuccess" : "Modyfikator wynikający z Rozmiaru doprowadził do sukcesu, liczba PS zredukowana do +0",
 
     "WFRP4E.Reach.Personal" : "Kontaktowa",
     "WFRP4E.Reach.VShort" : "Bardzo krótka",
@@ -704,16 +707,16 @@
     "CHARAbbrev.Fel": "Ogd",
 
 
-    "CHARBonus.WS": "Bonus do Walki Wręcz",
-	"CHARBonus.BS": "Bonus do Umiejętności Strzeleckich",
-	"CHARBonus.S": "Bonus do Siły",
-	"CHARBonus.T": "Bonus do Wytrzymałości",
-	"CHARBonus.I": "Bonus do Inicjatywy",
-	"CHARBonus.Ag": "Bonus do Zwinności",
-	"CHARBonus.Dex": "Bonus do Zręczności",
-	"CHARBonus.Int": "Bonus do Inteligencji",
-	"CHARBonus.WP": "Bonus do Siły Woli",
-    "CHARBonus.Fel": "Bonus do Ogłady",
+    "CHARBonus.WS": "Bonus z Walki Wręcz",
+	"CHARBonus.BS": "Bonus z Umiejętności Strzeleckich",
+	"CHARBonus.S": "Bonus z Siły",
+	"CHARBonus.T": "Bonus z Wytrzymałości",
+	"CHARBonus.I": "Bonus z Inicjatywy",
+	"CHARBonus.Ag": "Bonus z Zwinności",
+	"CHARBonus.Dex": "Bonus z Zręczności",
+	"CHARBonus.Int": "Bonus z Inteligencji",
+	"CHARBonus.WP": "Bonus z Siły Woli",
+    "CHARBonus.Fel": "Bonus z Ogłady",
     "Bonus" : "Bonus",
 
     "NAME.Armour" : "Pancerz",
@@ -762,7 +765,6 @@
     "NAME.Improvised" : "Broń Improwizowana",
     "NAME.ID" : "Precyzyjne Inkantowanie",
     "NAME.AA" : "Zmysł Magii",
-
     "NAME.SMB" : "Silny Cios",
     "NAME.AS" : "Celny Strzał",
     "NAME.Robust" : "Krzepki",
@@ -778,7 +780,6 @@
     "NAME.Resolute" : "Nieugięty",
     "NAME.DualWielder" : "Dwie Bronie",
     "NAME.Trickriding" : "Woltyżerka",
-    
     "NAME.Corruption" : "Korupcja",
     "NAME.Infected" : "Zarażony",
     "NAME.Disease" : "Choroba",
@@ -829,11 +830,14 @@
 
     "Disease.IncubationFinished" : "{disease}: czas inkubacji zakończył się. ",
 
+
+
     "PROPERTY.Accurate": "Celna",
     "PROPERTY.Blackpowder": "Prochowa",
     "PROPERTY.Blast": "Odłamkowa",
     "PROPERTY.Damaging": "Przebijająca",
     "PROPERTY.Defensive": "Parująca",
+    "PROPERTY.Distract": "Rozpraszający",
     "PROPERTY.Entangle": "Unieruchamiająca",
     "PROPERTY.Fast": "Szybka",
     "PROPERTY.Hack": "Rąbiąca",
@@ -862,7 +866,6 @@
     "PROPERTY.Fine": "Wyśmienity",
     "PROPERTY.Lightweight": "Poręczny",
     "PROPERTY.Practical": "Praktyczny",
-    "PROPERTY.Distract": "Rozpraszający",
 
     "PROPERTY.Flexible" : "Giętki",
     "PROPERTY.Impenetrable" : "Nieprzebijalny",
@@ -924,6 +927,7 @@
     "TRAVEL.DangerVeryHigh" : "bardzo wysokie",
     "TRAVEL.Helper" : "Odległości zostały oparte o dokument <i>Travel Distances in the Empire</i>, stworzony przez <i>Jackdays</i>. Dystans został sprawdzony pod kątem zgodności ze średniowiewcznymi dokumentami na temat podróżowania. Kierunek prądu rzeki został uwzględniony.<br><b>użycie</b> : <b>/travel miasto</b> lub <b>/travel miasto1 miasto2</b> lub <b>/travel</b>",
 
+
     "VEHICLE.ModEncumbranceTT" : "Obciążenie z Modyfikacji: {amt}",
     "VEHICLE.CarryEncumbranceTT" : "Obciążenie z Ładunku: {amt}",
     "VEHICLE.CrewRoles" : "Role Załogi",
@@ -941,6 +945,7 @@
     "VEHICLE.CantUseActor" : "Nie masz uprawnień aby wykonać ten test dla wybranego Aktora",
     "VEHICLE.NoActorOnBoard" : "Przypisany do Roli Aktor nie znajduje się w Wehikule.",
 
+    
     "CONFIGURE.CalcTokenSize" : "Automatycznie wylicz rozmiar Znacznika",
     "CONFIGURE.CalcRun" : "Automatycznie wylicz prędkość Biegu",
     "CONFIGURE.CalcWalk" : "Automatycznie wylicz prędkość Chodu",
