some translation related improvments

--- a/lang/en.json
+++ b/lang/en.json
@@ -358,7 +358,7 @@
     "Radius" : "Radius",
     "Extendable Duration" : "Extendable Duration",
     "Rollable" : "Rollable",
-    "Roll Characteristics" : "Roll Characteristics",
+    "Roll Characteristic" : "Roll Characteristic",
     "Bonus Characteristic" : "Bonus Characteristic",
     "Weapon Group" : "Weapon Group",
     "Type" : "Type",
@@ -762,6 +762,7 @@
     "SPEC.Magick" : "Magick",
     "NAME.Channelling" : "Channelling",
     "NAME.Melee" : "Melee",
+    "NAME.MeleeBrawling" : "Melee (Brawling)",
     "NAME.Ranged" : "Ranged",
     "NAME.Endurance" : "Endurance",
     "NAME.Cool" : "Cool",
