--- a/lang/pl.json
+++ b/lang/pl.json
@@ -358,7 +358,7 @@
     "Radius": "Kąt",
     "Extendable Duration": "Wydłużony Czas",
     "Rollable": "Tabela",
-    "Roll Characteristics": "Losuj Atrybuty",
+    "Roll Characteristic": "Testowany Atrybut",
     "Bonus Characteristic": "Bonus do Atrybutu",
     "Weapon Group": "Kategoria Broni",
     "Type": "Typ",
@@ -762,6 +762,7 @@
     "SPEC.Magick": "Magiczny",
     "NAME.Channelling": "Splatanie Magii",
     "NAME.Melee": "Broń Biała",
+    "NAME.MeleeBrawling" : "Broń Biała (Bijatyka)",
     "NAME.Ranged": "Broń Zasięgowa",
     "NAME.Endurance": "Odporność",
     "NAME.Cool": "Opanowanie",
