pl language updated

--- a/lang/pl.json
+++ b/lang/pl.json
@@ -85,6 +85,8 @@
     "SETTINGS.ThrowMoneyHint": "(Wymagane Dice So Nice) Rzuca monetami, gdy komendy płatności/kredytów są używane.",
     "SETTINGS.RangeAutoCalculation": "Automatycznie obliczaj modyfikatory odległości przy walce strzeleckiej",
     "SETTINGS.RangeAutoCalculationHint": "Wypełnij okno dialogowe testu modyfikatorami na podstawie odległości między tokenami.",
+    "SETTINGS.PlayerExperienceEditing" : "Edycja Doświadczenia Postaci",
+    "SETTINGS.PlayerExperienceEditingHint" :  "Pozwól graczom ręcznie ustawiać ilość doświadczenia postaci.",
 
     "SHEET.Close": "Zamknij",
     "SHEET.Configure": "Ustawienia Karty",
@@ -182,7 +184,7 @@
     "ITEM.ModeOverrideTT": "Zazwyczaj, dana broń jest traktowana jako broń ręczna lub dystansowa, tutaj możesz zmienić domyślny Typ",
     "ITEM.CargoType": "Typ Ładunku",
     "ITEM.UnitPrice": "Cena Jednostkowa",
-    "ITEM.CargoQuality": "Ilość",
+    "ITEM.CargoQuality": "Jakość",
     "ITEM.Origin": "Pochodzenie",
 
     "Basic": "Podstawowa",
@@ -434,6 +436,7 @@
     "DIALOG.VehicleActorSelect": "Wybierz aktora, aby użyć broni",
     "DIALOG.ActorSelection": "Wybierz aktora",
     "DIALOG.ShowTable": "Widoczność Tabel",
+    "DIALOG.RevertExperience" : "Cofnąć Punkty Doświadczenia?",
 
     "CHAT.CareerChoose": "Wybierz swoją Profesję",
     "CHAT.DamageError": "Błąd liczenia obrażeń:",
@@ -456,6 +459,9 @@
     "CHAT.CriticalWoundsApplied": "Obrażenia Krytyczne zadano",
     "CHAT.OpposedWonAgainst": "wygrał(a) przeciw",
     "CHAT.By": "o",
+    "CHAT.EditItem" : "Edytuj Przedmiot",
+    "CHAT.Haggle" : "Targuj się",
+    "CHAT.HaggleHint" : "Zmień cenę przedmiotu o +/-10%",
     "CHAT.CorruptingInfluence": "Niszczycielskie Wpływy",
     "CHAT.Resist": "Odporność",
     "CHAT.ContextualMenu": "Menu kontekstowe może być dostępne dla tej karty (wciśnij prawy przycisk)",
@@ -464,7 +470,8 @@
     "CHAT.RemovedConditions": "Usunięto Stan <b>{condition}</b> z <b>{name}</b>",
     "CHAT.WitchcraftMiscast": "Czarownictwo - Otrzymujesz 1 Punkt Korupcji jeśli wywołasz Manifestację Chaosu",
     "CHAT.ChannellingMiscast": "Czarowanie nie powiodło się po Splataniu",
-    "CHAT.Fear": "Strach",
+    "CHAT.Fear": "Strach", 
+    "CHAT.FearReminder" : "Następujący aktorzy są pod wpływem <b>Strachu</b> i mogą wykonać test, aby go przełamać.",
     "CHAT.ApplyTT": "MG: Wybierz znaczniki do zaaplikowania.\nGracze: Zaaplikuj przypisanej postaci",
     "CHAT.Terror": "Groza",
     "CHAT.Apply": "Zaaplikuj",
@@ -472,6 +479,9 @@
     "CHAT.EditError": "Nie masz uprawnień do modyfikowania tej wiadomości",
     "CHAT.Experience": "Zdobyte Doświadczenie",
     "CHAT.Receive": "Otrzymaj",
+    "CHAT.PostError" : "Musisz podać liczbę dodatnią.",
+    "CHAT.PostMoreThanHave" : "Nie można wyświetlić więcej niż posiadasz. Umieść liczbę zmniejszoną do {num}.",
+    "CHAT.PostQuantityReduced" : "Liczba zmniejszona do {num}",
     "CHAT.ExpReceived": "Otrzymano <b>{amount}</b> doświadczenia za <b>{reason}</b>",
     "CHAT.TestModifiers.WeaponLength": "-10 kary dla <b>{attacker}</b> za krótszą broń.",
     "CHAT.TestModifiers.FastWeapon": "Kara za obronę przeciw broni o cesze Szybka.",
@@ -483,7 +493,7 @@
     "CHAT.TestModifiers.AttackerMountLarger": "Bonus za atakowanie z większego wierzchowca.",
     "CHAT.TestModifiers.DefenderMountLarger": "Kara za atakowanie jeźdźca na większym wierzchowcu.",
     "CHAT.TestModifiers.SlowDefend": "Atakujący ma broń z cechą Powolna",
-
+    "CHAT.TestModifiers.WrapDefend" : "Atakujący ma broń z cechą Plącząca",
     "CHAT.CommandLine.Help.Commands": "Tables,Conditions,CharacterGeneration,NameGeneration,AvailabilityTest,Pay,Credit,Corruption,Travel,Exp",
     "CHAT.CommandLine.Help.Label.Command": "Command",
     "CHAT.CommandLine.Help.Label.Example": "Example",
@@ -968,6 +978,9 @@
     "BUTTON.CharacterCreation": "Tworzenie Bohatera", 
     "CHAT.NoGenerator" : "Brak aktywnego generatora. Użyj komendy /char aby rozpocząć.",
 
+    "CAREER.LeaveComplete" : "Opuszczasz skompletowaną profesję",
+    "CAREER.LeaveIncomplete" : "Opuszczasz nieskompletowaną profesję",
+    "CAREER.DifferentClass" : "Zmieniasz klasę postaci",
 
     "EFFECT.TabWFRP": "WFRP",
     "EFFECT.EffectType": "Typ Efektu",
