improvment in error handling and hasdamaging / hasimpact

--- a/lang/en.json
+++ b/lang/en.json
@@ -540,19 +540,19 @@
     "CHAT.CommandLine.Help.Travel.Usage.Note" : "Based off of the <a href='http://www.gitzmansgallery.com/docs/Travel%20Distances%20in%20the%20Empire.pdf'>Travel Distances in the Empire</a> PDF.",
     "CHAT.CommandLine.Help.Link" : "See the <a href={link}>Wiki</a> for more information on the features in this system",
 
-    "Error.SpeciesSkills" : "Could not add skills for species",
-    "Error.SpeciesTalents" : "Could not add talents for species",
-    "Error.CriticalWound" : "Error applying wounds value",
-    "Error.DamageCalc" : "Error calculating damage",
-    "Error.Opposed" : "Could not complete opposed test",
-    "Error.MacroItemMissing" : "Your controlled Actor does not have an item named",
-    "Error.NoAmmo" : "No Ammo!",
-    "Error.NotLoaded" : "Not Loaded - Reloading",
-    "Error.LimitedWeapons" : "You can't equip any more weapons.",
-    "ERROR.DamagePermission" : "You do not have permission to apply damage to this actor.",
-    "ERROR.TokenMount" : "Token mounts require you to be viewing the scene with the mount.",
-    "ERROR.MountNotFound" : "Error retrieving mount. Try removing the mount.",
-    "ERROR.CharAssigned" : "No character assigned. See the player configuration menu to assign a character.",
+    "ErrorSpeciesSkills" : "Could not add skills for species",
+    "ErrorSpeciesTalents" : "Could not add talents for species",
+    "ErrorCriticalWound" : "Error applying wounds value",
+    "ErrorDamageCalc" : "Error calculating damage",
+    "ErrorOpposed" : "Could not complete opposed test",
+    "ErrorMacroItemMissing" : "Your controlled Actor does not have an item named",
+    "ErrorNoAmmo" : "No Ammo!",
+    "ErrorNotLoaded" : "Not Loaded - Reloading",
+    "ErrorLimitedWeapons" : "You can't equip any more weapons.",
+    "ErrorDamagePermission" : "You do not have permission to apply damage to this actor.",
+    "ErrorTokenMount" : "Token mounts require you to be viewing the scene with the mount.",
+    "ErrorMountNotFound" : "Error retrieving mount. Try removing the mount.",
+    "ErrorCharAssigned" : "No character assigned. See the player configuration menu to assign a character.",
 
     "INCOME.YouEarn" : "You earn",
     "INCOME.Failure" : "You have a very bad week, and earn nothing (or have your money stolen, or some similar mishap).",
