--- a/lang/pl.json
+++ b/lang/pl.json
@@ -540,19 +540,19 @@
     "CHAT.CommandLine.Help.Travel.Usage.Note": "Based off of the <a href='http://www.gitzmansgallery.com/docs/Travel%20Distances%20in%20the%20Empire.pdf'>Travel Distances in the Empire</a> PDF.",
     "CHAT.CommandLine.Help.Link": "See the <a href={link}>Wiki</a> for more information on the features in this system",
 
-    "Error.SpeciesSkills": "Nie mogę dać Umiejętności temu Gatunkowi",
-    "Error.SpeciesTalents": "Nie mogę dać Talentu temu Gatunkowi",
-    "Error.CriticalWound": "Błąd zadawania Obrażeń Krytycznych",
-    "Error.DamageCalc": "Błąd obliczania Obrażeń",
-    "Error.Opposed": "Nie udało się dokończyć Testu Przeciwstawnego",
-    "Error.MacroItemMissing": "Kontrolowany Aktor nie posiada żadnego nazwnageo przedmiotu.",
-    "Error.NoAmmo": "Brak Amunicji!",
-    "Error.NotLoaded": "Nie załadowano - Przeładowuję",
-    "Error.LimitedWeapons": "Nie możesz dzierżyć więcj broni.",
-    "ERROR.DamagePermission": "Nie posiadasz uprawnień, aby zadać obrażenia temu Aktorowi.",
-    "ERROR.TokenMount": "Znaczniki Wierzchowców wymagają abyś był obecny w Scenie gdzie znajduje się Wierzchowiec.",
-    "ERROR.MountNotFound": "Nie udało się znaleźć Wierzchowca. Spróbuj dodać Wierzchowca ponownie.",
-    "ERROR.CharAssigned": "Nie przypisano postaci, sprawdź konfigurację Gracza, aby przypisać postać.",
+    "ErrorSpeciesSkills": "Nie mogę dać Umiejętności temu Gatunkowi",
+    "ErrorSpeciesTalents": "Nie mogę dać Talentu temu Gatunkowi",
+    "ErrorCriticalWound": "Błąd zadawania Obrażeń Krytycznych",
+    "ErrorDamageCalc": "Błąd obliczania Obrażeń",
+    "ErrorOpposed": "Nie udało się dokończyć Testu Przeciwstawnego",
+    "ErrorMacroItemMissing": "Kontrolowany Aktor nie posiada żadnego nazwnageo przedmiotu.",
+    "ErrorNoAmmo": "Brak Amunicji!",
+    "ErrorNotLoaded": "Nie załadowano - Przeładowuję",
+    "ErrorLimitedWeapons": "Nie możesz dzierżyć więcj broni.",
+    "ErrorDamagePermission": "Nie posiadasz uprawnień, aby zadać obrażenia temu Aktorowi.",
+    "ErrorTokenMount": "Znaczniki Wierzchowców wymagają abyś był obecny w Scenie gdzie znajduje się Wierzchowiec.",
+    "ErrorMountNotFound": "Nie udało się znaleźć Wierzchowca. Spróbuj dodać Wierzchowca ponownie.",
+    "ErrorCharAssigned": "Nie przypisano postaci, sprawdź konfigurację Gracza, aby przypisać postać.",
 
     "INCOME.YouEarn": "Zarobiłeś",
     "INCOME.Failure": "Miałeś bardzo kiepski tydzień, nic nie zarobiłeś (albo cię okradziono lub miałeś równie przesrane).",
