translation for char-gen

--- a/lang/en.json
+++ b/lang/en.json
@@ -746,6 +746,9 @@
     "NAME.Swarm" : "Swarm",
     "NAME.Size" : "Size",
     "NAME.Ward" : "Ward",
+    "NAME.TraitWeapon" : "Weapon",
+    "NAME.TraitRanged" : "Ranged",
+    "NAME.TraitArmour" : "Armour",
     "NAME.Unstable" : "Unstable",
     "NAME.Infighter" : "In-fighter",
     "SPEC.Tiny" : "Tiny",
