--- a/lang/pl.json
+++ b/lang/pl.json
@@ -746,6 +746,9 @@
     "NAME.Swarm": "Rój",
     "NAME.Size": "Rozmiar",
     "NAME.Ward": "Ochrona",
+    "NAME.TraitWeapon" : "Broń",
+    "NAME.TraitRanged" : "Strzelanie",
+    "NAME.TraitArmour" : "Pancerz",
     "NAME.Unstable": "Niestabilny",
     "NAME.Infighter": "Skrócenie dystansu",
     "SPEC.Tiny": "Drobny",
