--- a/lang/pl.json
+++ b/lang/pl.json
@@ -759,11 +759,11 @@
     "SPEC.Enormous": "Wielki",
     "SPEC.Monstrous": "Monstrualny",
 
-    "NAME.BP": "Miedziany Pens",
+    "NAME.BP": "Brązowy Pens",
     "NAME.SS": "Srebrny Szyling",
     "NAME.GC": "Złota Korona",
 
-    "NAME.BPPlural": "Miedziane Pensy",
+    "NAME.BPPlural": "Brązowe Pensy",
     "NAME.SSPlural": "Srebrne Szylingi",
     "NAME.GCPlural": "Złote Korony",
 
