minor translation imrpvoments

--- a/lang/pl.json
+++ b/lang/pl.json
@@ -115,7 +115,7 @@
     "SHEET.CreateItem": "Stwórz Przedmiot",
     "SHEET.PostItem": "Opublikuj Przedmiot na Czacie",
     "SHEET.EditItem": "Edytuj Przedmiot",
-    "SHEET.Dropdown": "Upuść Przedmiot",
+    "SHEET.Dropdown": "Rozwiń",
     "SHEET.DeleteItem": "Zniszcz Przedmiot",
     "SHEET.RemoveItem": "Usuń Przedmiot",
     "SHEET.EncCount": "Poziom Obciążenia",
@@ -844,8 +844,8 @@
     "SHEET.ApplyToTarget": "Nałóż na cel",
     "SHEET.ToggleEffect": "Przełącz Efekt",
     "SHEET.Additional": "Dodatkowo",
-    "SHEET.ApplyEffect": "Apply {effect}",
-    "SHEET.InvokeEffect": "Nałóż efekt: {effect}",
+    "SHEET.ApplyEffect": "Nałóż efekt {effect}",
+    "SHEET.InvokeEffect": "Wykonaj efekt: {effect}",
     "SHEET.ExpChange": "Zmiana Doświadczenia",
     "SHEET.TotalSpentExp": "Wydano / Całość",
     "SHEET.CharacteristicCurrent": "Aktualne",
